# SEA-ME_Team6_2025-26

./: .dotstop.dot  .dotstop.dot.bak  .gitignore  .needs.dot  AUDIT_REPORT.md  GITHUB_ISSUE_SDK_ARCHITECTURE.md  README.md  daily_chat_reminder.sh  joystick_control.py  lint_results.json  localplugins  setup_trudag_final.sh
.dotstop_extensions/: __init__.py  references.py  validators.py
.dotstop_extensions.backup/: references.py  validators.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: daily-meeting.yml  epic.yml  task.yml
.github/workflows/: daily-meeting.yml  ota.yml  publish-qt-image.yml  taskly.yml  test-knowledge-coverage.yml  teste-publish.yml  trudag-report.yml  tsf-ci.yml  tsf-validate.yml  unit-tests.yml
docs/: README.md  SEAME_material_list.xlsx  contribute_guidelines.md  product_backlog.md
docs/CAN_protocol/: CAN_protocol.md
docs/TSF/: .dotstop.dot  TSF_IMPLEMENTATION.md  WhatsTSF.md  What´s_TSF  tsf-guide.md
docs/dailys/: dailys_warmups.md
docs/demos/: CAN-test-EXPECT-L0-8.webm  OTA_multiversion-arch-sprint8.md  Qt-CAN-Display
docs/discord-bot/: PLANNING.md
docs/doorstop/: ASSERTIONS.md  ASSUMPTIONS.md  EVIDENCES.md  EXPECTATIONS.md  dashboard.md  nav.md  trustable_report_for_Software.md
docs/guides/: AGL Installation Guide  AGL and ThreadX Benefits  AGL_Configuration_Guide.md  AGL_Installation_Guide.md  AGL_and_ThreadX_benefits_Guide.md  CAN-explanation.md  CAN-overview.md  CAN-test-guide.md  Covesa_Documentation.md  Install and Test Joystick in AGL.md  MQTT_spike.md  (+18 more)
src/: HelloQt6Qml  README.md  build-deploy.sh  deploy.sh  find-dependencies.sh
src/cluster/: CMakeLists.txt  Makefile  README.md  main.cpp  qml.qrc
src/cluster/build-arm/: CMakeCache.txt
src/cluster/build-dev/: CMakeCache.txt
src/cluster/build-host/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/cluster/build-host/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/cluster/build-host/HelloQt6Qml_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/cluster/build-host/HelloQt6Qml_autogen/EWIEGA46WW/: qrc_qml.cpp
src/cluster/build-host/HelloQt6Qml_autogen/VU2PALRVTW/: moc_ipcclient.cpp.d  moc_reader.cpp  moc_reader.cpp.d  moc_speedprovider.cpp  moc_speedprovider.cpp.d  moc_systemstatus.cpp.d  moc_temperatureprovider.cpp.d  moc_timeprovider.cpp  moc_timeprovider.cpp.d
src/cluster/qml/: main.qml
src/cluster/qml/components/: BottomBar.qml  Gauge.qml  NavBar.qml  NavButton.qml  SpeedGauge.qml  TopBar.qml
src/cluster/qml/screens/: BaseScreen.qml  CenterScreen.qml  ClusterScreen.qml  HomeScreen.qml  LeftScreen.qml  RightScreen.qml  SettingsScreen.qml  cluster.qml  home.qml
src/cluster/qml/themes/: BaseTheme.qml
src/cluster/scripts/: progressbar.sh  run.sh
src/cluster/src/: main.cpp
src/cluster/src/backend/: frontdistanceprovider.cpp  headingprovider.cpp  ipcclient.cpp  ipcclient.hpp  reader.cpp  reader.hpp  speedprovider.cpp  speedprovider.hpp  systemstatus.cpp  temperatureprovider.cpp  temperatureprovider.hpp  timeprovider.cpp  timeprovider.hpp  voltageprovider.cpp  voltageprovider.hpp  wheelangleprovider.cpp
src/cluster/src/backend/kuksa/: types.grpc.pb.cc  types.pb.cc  val.grpc.pb.cc  val.pb.cc  val.pb.h
src/stm/tests/: CMakeLists.txt  run_tests.sh  setup_gtest.sh
src/stm/tests/mocks/: hts221_stub.h  iis2mdc_stub.h  ism330dhcx_stub.h  lps22hh_stub.h  main.h  stm32_mocks.cpp  stm32u5xx_hal.h  tx_api.h  veml6030_stub.h
src/stm/tests/unit/: motor_control_testable.c  servo_testable.c  servo_testable.h  speedometer_testable.c  speedometer_testable.h  test_hts221.cpp  test_iis2mdc.cpp  test_motor_control.cpp  test_servo.cpp  test_tof.cpp
src/tests/: CMakeLists.txt  Dockerfile  Makefile  README.md
src/tests/can_handlers_tests/: CMakeLists.txt  Dockerfile  Makefile  requirements.md
src/tests/can_handlers_tests/tests/: battery_test.cpp  can_decode_test.cpp  dispatcher_test.cpp  environment_test.cpp  heartbeat_stm_test.cpp  speed_test.cpp  tof_distance_test.cpp
src/tests/cmake/: CoverageCpp.cmake  CoverageIndex.cmake  CoveragePython.cmake
src/tests/coverage/: index.html
src/tests/coverage/cpp/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
src/tests/coverage/cpp/backend/: index-sort-f.html  index-sort-l.html  index.html  ipcclient.cpp.func-c.html  ipcclient.cpp.func.html  ipcclient.cpp.gcov.html  speedprovider.cpp.func-c.html  speedprovider.cpp.func.html  speedprovider.cpp.gcov.html  systemstatus.cpp.func-c.html  systemstatus.cpp.func.html  systemstatus.cpp.gcov.html  temperatureprovider.cpp.func-c.html  temperatureprovider.cpp.func.html  temperatureprovider.cpp.gcov.html  timeprovider.cpp.func-c.html  timeprovider.cpp.func.html  timeprovider.cpp.gcov.html
src/tests/scripts/: coverage.sh  run_tests_docker.sh
src/tests/unit/: CMakeLists.txt
src/tests/unit/cpp/: battery_test.cpp  can_decode_test.cpp  can_frame_builder.hpp  dispatcher_test.cpp  emergency_stop_test.cpp  emergency_stop_testable.c  emergency_stop_testable.h  environment_test.cpp  fake_kuksa_client.hpp  heartbeat_stm_test.cpp  imu_accel_test.cpp  imu_gyro_test.cpp  imu_magn_test.cpp  is_stm_connected_test.cpp  joystick_test.cpp  motor_control_testable.h  speed_test.cpp  speedprovider_test.cpp  temperatureprovider_test.cpp  test_emergency_stop.cpp  test_integration.cpp  test_ism330dhcx.cpp  test_lps22hh.cpp  test_speedometer.cpp  test_veml6030.cpp  timeprovider_test.cpp  tof_distance_test.cpp  tof_testable.c  tof_testable.h
src/tests/unit/mocks/: hts221_stub.h  iis2mdc.h  iis2mdc_stub.h  ism330dhcx_stub.h  lps22hh_stub.h  stm32_mocks.cpp  stm32u5xx_hal.h  tx_api.h  veml6030_stub.h
src/tests/unit/python/: .coverage  .coveragerc  calculator.py  requirements.txt  test_calculator.py  test_joystick_control.py
src/tests/unit/study/: CMakeLists.txt  math.cpp  test_math.cpp
src/tests/utils/scripts/: generate_index.sh  run_python_coverage.sh
to_delete/: CHAT_EXPORT_REMINDER.md  PLANNING-WITH-GROK.md  create_backlog_issues.py  fix_remaining_evidences.sh  tsf_pipeline.sh
tools/: generate_graph_from_heuristics.py
(+1053 files in other folders)
